# bugs

ubuntu+cmake+qt/: CMakeLists.txt  CMakePresets.json
ubuntu+cmake+qt/Widgets/: CMakeLists.txt  QtExWidgetsConfig.cmake.in  StatusBar.cpp
ubuntu+cmake+qt/Widgets/include/: StatusBar.h
ubuntu+cmake+qt/cmake/: CMakeCPack.cmake  QtExConfig.cmake
ubuntu+cmake+qt/example/: CMakeLists.txt
ubuntu+cmake+qt/example/CustomWidgetDemo/: CMakeLists.txt  CustomWidgetDemo.cpp  CustomWidgetDemo.h  CustomWidgetDemo.ui  main.cpp
